[gd_scene load_steps=4 format=3 uid="uid://wy31sxu058wc"]

[ext_resource type="Script" path="res://Main.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/LoadingSplash.tscn" id="2"]
[ext_resource type="Font" path="res://assets/fonts/UITextDefault.tres" id="3"]

[node name="Main" type="Node"]
script = ExtResource( "1" )
scene_to_load = "res://scenes/MainViewport.tscn"

[node name="LoadingSplash" parent="." instance=ExtResource( "2" )]

[node name="LoadingUI" type="CanvasLayer" parent="."]
layer = 2

[node name="LoadingText" type="RichTextLabel" parent="LoadingUI"]
rect_min_size = Vector2(0, 150)
theme_override_fonts/normal_font = ExtResource( "3" )
text = "
Loading..."
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="LoadingUI"]
visible = false
rect_min_size = Vector2(200, 28)
step = 1.0
__meta__ = {
"_edit_use_anchors_": false
}
